--- a/Exercícios/exerc10/assets/css/style.css
+++ b/Exercícios/exerc10/assets/css/style.css
@@ -11,17 +11,20 @@ body{
     width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
 .container{
     background-color: white;
-    height: 15vh;
+    height: 50vh;
     width: 50vw;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    margin-top: 2rem;
     padding: 2rem 1rem;
     border-radius: 2%;
-    font-weight: bold;
-    text-align: center;
+    text-align: left;
+}
+
+h1{
+    font-size: 2rem;
 }
