--- a/Exercícios/exerc11/assets/css/style.css
+++ b/Exercícios/exerc11/assets/css/style.css
@@ -6,22 +6,22 @@
 }
 
 body{
-    background-color: #0d5452;
+    background-color: rgb(17, 86, 102);
     height: 100vh;
     width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
 .container{
     background-color: white;
-    height: 15vh;
+    height: 50vh;
     width: 50vw;
-    font-size: 2rem;
     padding: 2rem 1rem;
+    margin-top: 2rem;
     border-radius: 2%;
-    font-weight: bold;
-    text-align: center;
+}
+p{
+    margin: 1rem 0;
 }
