--- a/Exercícios/exerc08/assets/css/style.css
+++ b/Exercícios/exerc08/assets/css/style.css
@@ -1,3 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap');
+
+:root{
+    --colorDefault: rgb(17, 86, 102);
+    --fontDefault: "Open Sans", sans-serif;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -6,73 +14,83 @@
 }
 
 body{
-    background-color: #0d5452;
+    background-color: var(--colorDefault);
     height: 100vh;
     width: 100vw;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--fontDefault);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container{
     background-color: white;
-    width: 40%;
-    height: 100%;
-    margin: 0 auto;
-    padding: 2rem 1rem;
+    height: 100vh;
+    width: 40vw;
+    padding: 2rem 2rem;
     border-radius: 2%;
 }
-
-ul{
-    display: inline-block;
-    list-style: none;
-    width: 50%;
-    margin: 1rem 0 1rem;
-    line-height: 2;
-    font-size: 1rem;
+.container .content{
+    height: 42vh;
+   
+}
+.container .cabecalho{
+    height: 40vh;
 }
 
-ul .list-title{
-    font-weight: bold;
+.container .rodape{
+    height: 5vh;
 }
 
-.resultados{
-    float: right;
-}
-
-.form-title{
+table{
+    width: 100%;
+    text-align: left;
     margin: 1rem 0;
 }
 
-label{
-    font-size: 1rem;
-    display: block;
+.formulario form{
+    margin: 0.8rem 0;
 }
-input{
-    padding: 0 0 0 1rem;
-    display: block;
+.formulario label, input{
+    display: inline-block;
     width: 100%;
-    height: 6.5vh;
-    font-size: 1.5rem;
-    margin: .5rem 0 .2rem;
+    margin: 0.2rem 0;
 }
 
-input:hover{
-    border: 2px solid #0d5452;
+.formulario input[type='text']{
+    height: 2.5rem;
+    font-size: 1.2rem;
+    padding: 0.5rem;
 }
 
-.btn-calcule{
+.formulario input[type='submit']{
+    background-color: var(--colorDefault);
     border: none;
-    background-color: #0d5452;
-    font-size: 1rem;
+    height: 2.2rem;
+    margin: 1rem 0 0;
+    padding: 0.5rem 0;
+    font-size: .9rem;
+    font-weight: 500;
     color: white;
     cursor: pointer;
-    padding: 0;
-    transition: all 200ms 50ms;
+    transition: background-color;
 }
 
-.btn-calcule:hover{
-    border: none;
-    background-color: #0b4442
+.formulario input[type='submit']:hover{
+    background-color: rgb(19, 104, 122);
 }
-.resultado{
-    padding: .5rem .5rem;
+
+#result{
+    width: 100%;
+    height: 100%;
+}
+
+.paragrafo-true{
+    background-color: rgb(109, 255, 182);
+    padding: 10px 20px;
+}
+
+.paragrafo-false{
+    background-color: rgb(255, 150, 150);
+    padding: 10px 20px;
 }
