--- a/Exercícios/exerc10/assets/css/style.css
+++ b/Exercícios/exerc10/assets/css/style.css
@@ -16,15 +16,15 @@ body{
 
 .container{
     background-color: white;
-    height: 50vh;
+    height: 100vh;
     width: 50vw;
     font-size: 1.5rem;
-    margin-top: 2rem;
-    padding: 2rem 1rem;
+    padding: 2rem 1.5rem;
     border-radius: 2%;
     text-align: left;
 }
 
 h1{
     font-size: 2rem;
+    margin-bottom: 1rem;
 }
