--- a/Exercícios/exerc11/assets/css/style.css
+++ b/Exercícios/exerc11/assets/css/style.css
@@ -1,3 +1,7 @@
+:root{
+    --colorDefault: rgb(17, 86, 102);
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -6,22 +10,45 @@
 }
 
 body{
-    background-color: rgb(17, 86, 102);
+    background-color: var(--colorDefault);
     height: 100vh;
     width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
 .container{
     background-color: white;
-    height: 50vh;
+    height: 100vh;
     width: 50vw;
-    padding: 2rem 1rem;
-    margin-top: 2rem;
+    font-size: 2rem;
+    padding: 2rem 2rem;
     border-radius: 2%;
+    font-weight: bold;
+    text-align: center;
 }
-p{
+.content{
+    height: 50vh;
+    border: solid red;
+}
+.cabecalho{
+    height: 12.5vh;
+    border: solid;
+}
+.rodape{
+    height: 12.5vh;
+    border: solid blue;
+}
+h1{
+    font-size: 2rem;
+    text-align: justify;
+}
+
+.paragrafos p{
+    font-size: 1rem;
+    text-align: justify;
     margin: 1rem 0;
+    font-weight: normal;
 }
