--- a/Modelos/modelo/assets/css/style.css
+++ b/Modelos/modelo/assets/css/style.css
@@ -1,3 +1,7 @@
+:root{
+    --colorDefault: rgb(17, 86, 102);
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -6,7 +10,7 @@
 }
 
 body{
-    background-color: #0d5452;
+    background-color: var(--colorDefault);
     height: 100vh;
     width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
@@ -17,11 +21,23 @@ body{
 
 .container{
     background-color: white;
-    height: 15vh;
+    height: 100vh;
     width: 50vw;
     font-size: 2rem;
-    padding: 2rem 1rem;
+    padding: 2rem 2rem;
     border-radius: 2%;
     font-weight: bold;
     text-align: center;
+}
+.content{
+    height: 50vh;
+    border: solid red;
+}
+.cabecalho{
+    height: 12.5vh;
+    border: solid;
+}
+.rodape{
+    height: 12.5vh;
+    border: solid blue;
 }
