--- a/Exercícios/exerc19/assets/css/style.css
+++ b/Exercícios/exerc19/assets/css/style.css
@@ -35,6 +35,10 @@ input{
     height: 2.4rem;
     font-size: 1.5rem;
     margin: .4rem 0;
+    transition: border-color;
+}
+input:focus{
+    border-color: #0d5452;
 }
 .input-submit{
     border: none;
