--- a/projetos/agenda/node/src/views/index.ejs
+++ b/projetos/agenda/node/src/views/index.ejs
@@ -10,8 +10,9 @@
     <!--Font Icons-->
     <script src="https://kit.fontawesome.com/9df899838e.js" crossorigin="anonymous"></script>
 
-    <!--Google Fonts-->
+
     
+    <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
@@ -35,7 +36,7 @@
                     <label for="manter-conectado"> <input type="checkbox" name="manterConectado" id="manter-conectado">Manter conectado</label>
                     <a href="#" class="recupera-senha">Recuperar senha</a>
                     <input type="submit" value="entrar" class="button-entrar">
-                    <a href="#" class="button-cadastrar">cadastre-se grátis</a>
+                    <a href="#" class="button-cadastro">cadastre-se grátis</a>
 
                 </form>
             </section>
