--- a/projetos/agenda/node/frontend/assets/css/style.css
+++ b/projetos/agenda/node/frontend/assets/css/style.css
@@ -16,6 +16,7 @@ body{
     width: 100vw;
     font-family: 'Poppins', sans-serif;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
@@ -38,7 +39,6 @@ body{
     height: 100%;
 }
 
-
 .principal{
     display: none;
     background-color: #2f89ff;
@@ -59,7 +59,9 @@ body{
     text-align: left;
 }
 
-.fas{
+
+
+.form .fas{
     display: block;
     text-align: center;
     color: #2980F2;
@@ -82,7 +84,7 @@ form label{
     font-weight: 500;
 }
 
-form input[type='email'], form input[type='password']{
+form input[type='email'], form input[type='password'], form input[type='text']{
     width: 100%;
     height: 90%;
     background-color: #f7f7f7;
@@ -113,7 +115,7 @@ label[for="manter-conectado"]{
     float: right;
 }
 
-.button-cadastrar{
+.button-cadastro{
     border: 1px solid #2f89ff;
     border-radius: 3px;
     padding: .39rem .8rem;
@@ -125,7 +127,8 @@ label[for="manter-conectado"]{
     float: right;
     transition: all 0.5s ease-out;
 }
-.button-cadastrar:hover{
+
+.button-cadastro:hover{
     cursor: pointer;
     color: #095fcf;
     border-color: #095fcf;
@@ -165,4 +168,186 @@ label[for="manter-conectado"]{
     .cabecalho{
         display: block;
     }
+    .cabecalho-cadastro{
+        display: block;
+    }
+}
+
+/*STYLE CADASTRO*/
+
+.container-cadastro{
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    box-shadow: 5px 25px 30px rgb(172, 172, 172);
+}
+
+.form-cadastro .fas{
+    display: block;
+    text-align: center;
+    color: #2980F2;
+    font-size: 1.5rem;
+}
+
+.form-cadastro{
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: -5px 12px 20px #1f65c0, 5px 12px 20px #1f65c0;
+    height: 90%;
+    width: 270px;
+    padding: .5rem 1rem 0rem;
+    text-align: left;
+}
+
+.cabecalho-cadastro{
+    display: none;
+    background-image: url('../imgs/fundo-cadastro.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 110%;
+    border-radius: 20px 0 0 20px;
+    width: 50%;
+    height: 100%;
+}
+
+form input[type='text']{
+    width: 100%;
+    height: 90%;
+    background-color: #f7f7f7;
+    border: 1px solid #c9c3c3;
+    padding: .6rem;
+    margin-bottom: 1rem;
+    border-radius: 4px;
+    font-size: .8rem;
+}
+
+.button-login{
+    border: 1px solid #2f89ff;
+    border-radius: 3px;
+    padding: .39rem .8rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    color:#2f89ff;
+    font-size: .7rem;
+    font-weight: 500;
+    float: right;
+    transition: all 0.5s ease-out;
+}
+.button-login:hover{
+    cursor: pointer;
+    color: #095fcf;
+    border-color: #095fcf;
+}
+
+.button-cadastrar{
+    border: none;
+    border-radius: 3px;
+    padding: .55rem 1rem;
+    background-color: #2f89ff;
+    clear: left;
+    float: left;
+    color: white;
+    text-transform: uppercase;
+    font-size: .75rem;
+    font-weight: 600;
+    transition: all 0.5s ease-out;
+}
+
+.button-cadastrar:hover{
+    cursor: pointer;
+    background-color: #095fcf;
+}
+
+@media screen and (min-width: 801px) {
+    .container-cadastro{
+        height: 96%;
+        width: 90%;
+        border-radius: 20px;
+    }
+
+    .cabecalho-cadastro{
+        display: block;
+    }
+
+    .form-cadastro {
+        height: 93%;
+    }
+
+}
+
+/*-------------------------------------------*/
+
+.cabecalho-home{
+    background-color: #2f89ff;
+    padding: .3rem .2rem;
+    min-height: 5%;
+    width: 100%;
+    align-self: flex-start;
+}
+.button-bar, .button-user{
+    border: none;
+    background-color: transparent;
+    color: white;
+    padding: 0 .2rem;
+    font-size: 1.5rem;
+    float: left;
+    cursor: pointer;
+}
+.button-user{
+    float: right;
+}
+.cabecalho-menu{
+    clear: left;
+    font-size: 1rem;
+    width: auto;
+    display: none;
+    list-style-type: none;
+}
+.cabecalho-menu li{
+    text-align: center;
+    color: white;
+    padding: .2rem .5rem;
+    cursor: pointer;
+}
+
+.cabecalho-menu li:hover{
+   border: solid .5px white;
+}
+
+/**/
+.main-home{
+    background-color: white;
+    width: 90%;
+    height: 90%;
+    box-shadow: 5px 25px 30px rgb(172, 172, 172);
+    border-radius: 15px;
+    padding: 2rem 1.5rem;
+}
+
+.main-table{
+    width: 100%;
+    max-height: 100%;
+}
+
+th, tr, td{
+    text-align: center;
+    border: 0.5px solid black;
+}
+
+
+
+@media screen and (min-width: 801px) {
+    .button-bar{
+        display: none;
+    }
+    .cabecalho-menu li{
+        display: inline-block;
+        width: 20%;
+        cursor: pointer;
+    }
+    .cabecalho-menu{
+        display: block;
+    }
+
 }
