--- a/projetos/agenda/node/src/views/cadastro.ejs
+++ b/projetos/agenda/node/src/views/cadastro.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,29 +16,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <title>Modelo</title>
+
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>ESSA É A PAGINA DE CADASTRO</h1>
+    <div class="container-cadastro">
+        <header class="cabecalho-cadastro">
+    
         </header>
-        <main>
-            <form action="" method="post" class="cadastrar-usuario">
-                <label for="nome">Nome</label> 
-                <input type="text" id="nome" name="nome">
-                <label for="sobrenome">Sobrenome</label> 
-                <input type="text" id="sobrenome" name="sobrenome">
-                <label for="email">Email</label> 
-                <input type="email" name="email" id="email">
-                <label for="password">Senha</label> 
-                <input type="password" name="password" id="password">
-                <label for="conf-senha">Confirma senha</label>
-                <input type="password" name="conf-senha" id="conf-senha">
-                <input type="submit" value="Cadastrar">
-            </form>
+        <main class="principal">
+            <section class="form-cadastro">
+                <i class="fas fa-user-edit"></i>
+                <h2 class="subtitle">Cadastre-se</h2>
+                <form action="" method="post">
+                    <label for="nome">Nome</label>
+                    <input type="text" name="nome" id="nome" placeholder="Seu primeiro nome">
+                    <label for="sobrenome">Sobrenome</label>
+                    <input type="text" name="sobrenome" id="sobrenome" placeholder="Seu segundo nome">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="email@example.com">
+                    <label for="Usuario">Usuario</label>
+                    <input type="text" name="usuario" id="usuario">
+                    <label for="senha">Senha</label>
+                    <input type="password" name="senha" id="senha" placeholder="Insira sua senha">
+                    <label for="confSenha">Confirmar Senha:</label>
+                    <input type="password" name="confSenha" id="confSenha" placeholder="Confirme sua senha">
+                    
+                    <input type="submit" value="Cadastrar" class="button-cadastrar">
+                    <a href="#" class="button-login">Fazer Login</a>
 
+                </form>
+            </section>
         </main>
     </div>
-    
+    <script src="./assets/js/bundle.js"></script>
 </body>
 </html>
