--- a/Modelos/modelo3/src/views/index.ejs
+++ b/Modelos/modelo3/src/views/index.ejs
@@ -15,7 +15,11 @@
 
 <body>
     <main class="container">
-        <header class="cabecalho"></header>
+        <header class="cabecalho">
+            <h1>
+                <%= titulo %>
+            </h1>
+        </header>
         <main class="content"></main>
         <footer class="rodape"></footer>
     </main>
