--- a/projetos/agenda/node/frontend/assets/css/style.css
+++ b/projetos/agenda/node/frontend/assets/css/style.css
@@ -322,18 +322,31 @@ form input[type='text']{
     height: 90%;
     box-shadow: 5px 25px 30px rgb(172, 172, 172);
     border-radius: 15px;
-    padding: 2rem 1.5rem;
+    padding: 2rem .8rem;
 }
 
 .main-table{
+    display: block;
     width: 100%;
     max-height: 100%;
+    overflow-y: auto;
+    text-align: center;
 }
 
-th, tr, td{
-    text-align: center;
-    border: 0.5px solid black;
+.td-nome, .td-telefone, .td-email{
+    font-size: .3rem;
+    padding: 5px;
+    width: 90%;
 }
+.td-icons{
+    width: 10%;
+    font-size: .3rem;
+}
+
+
+
+
+
 
 
 
@@ -348,6 +361,9 @@ th, tr, td{
     }
     .cabecalho-menu{
         display: block;
+    }
+    .td-nome, .td-telefone, .td-email, .td-icons{
+        font-size: 1rem;
     }
 
 }
