--- a/projetos/agenda/node/src/views/home.ejs
+++ b/projetos/agenda/node/src/views/home.ejs
@@ -32,22 +32,24 @@
     <main class="main-home">
         <table class="main-table">
             <thead>
-                <th>Nome</th>
-                <th>Contato</th>
-                <th>Email</th>
-                <th>Delete</th>
-                <th>Update</th>
+                <th class="td-nome">Nome</th>
+                <th class="td-telefone">Contato</th>
+                <th class="td-email">Email</th>
+                <th class="td-icons">Delete</th>
+                <th class="td-icons">Update</th>
             </thead>
             
             <tbody>
                 <tr>
-                    <td>Rafael Lima</td>
-                    <td>(88) 98860-0652</td>
-                    <td>rafaesurfce@alu.ufc.br</td>
-                    <td><i class="fas fa-trash"></i></td>
-                    <td><i class="fas fa-pencil-alt"></i></td>
+                    <td class="td-nome">Rafael Lima</td>
+                    <td class="td-telefone">(88) 98860-0652</td>
+                    <td class="td-email">rafaesurfce@alu.ufc.br</td>
+                    <td class="td-icons"><i class="fas fa-trash"></i></td>
+                    <td class="td-icons"><i class="fas fa-pencil-alt"></i></td>
                 </tr>
                 
+                </tr> 
+
             </tbody>
 
             <tfoot>
