--- a/projetos/agenda/node/src/views/home.ejs
+++ b/projetos/agenda/node/src/views/home.ejs
@@ -35,8 +35,8 @@
                 <th class="td-nome">Nome</th>
                 <th class="td-telefone">Contato</th>
                 <th class="td-email">Email</th>
-                <th class="td-icons">Delete</th>
-                <th class="td-icons">Update</th>
+                <th class="td-icons">Excluir</th>
+                <th class="td-icons">Atualizar</th>
             </thead>
             
             <tbody>
@@ -45,10 +45,11 @@
                     <td class="td-telefone">(88) 98860-0652</td>
                     <td class="td-email">rafaesurfce@alu.ufc.br</td>
                     <td class="td-icons"><i class="fas fa-trash"></i></td>
-                    <td class="td-icons"><i class="fas fa-pencil-alt"></i></td>
+                    <td class="td-icons"><i class="fas fa-sync-alt"></i></td>
                 </tr>
+
                 
-                </tr> 
+                 
 
             </tbody>
 
