--- a/projetos/agenda/node/frontend/assets/css/style.css
+++ b/projetos/agenda/node/frontend/assets/css/style.css
@@ -77,7 +77,7 @@ form {
     margin: .8rem 0;
 }
 
-form label{
+form label, form legend{
     font-size: .7rem;
     text-align: left;
     font-weight: 500;
@@ -174,7 +174,7 @@ label[for="manter-conectado"]{
     background-color: white;
     border-radius: 15px;
     box-shadow: -5px 12px 20px #1f65c0, 5px 12px 20px #1f65c0;
-    max-height: 90%;
+    height: 600.2px;
     width: 270px;
     padding: .8rem 1rem;
     text-align: left;
@@ -317,11 +317,16 @@ thead, tfoot{
 }
 
 .main-form form input[type='tel'], .main-form form input[type='email']{
-    width: 200px;
+    max-width: 200px;
 }
 
 form select{
     max-width: 100px;
+}
+fieldset{
+    padding: 0 .5rem;
+    margin-bottom: .5rem;
+    border-radius: 4px;
 }
 
 @media screen and (min-width: 800px) {
@@ -347,11 +352,6 @@ form select{
     .cabecalho-cadastro{
         display: block;
     }
-
-    .form-cadastro {
-        height: 93%;
-    }
-
     .button-bar{
         display: none;
     }
