--- a/projetos/agenda/node/src/views/404.ejs
+++ b/projetos/agenda/node/src/views/404.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erro</title>
-</head>
+<%- include('includes/head') %>
 <body>
     <h1>Erro 404</h1>
 </body>
