--- a/projetos/agenda/node/src/views/home.ejs
+++ b/projetos/agenda/node/src/views/home.ejs
@@ -1,34 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Agenda, Contatos, Agenda Telefônica">
-    <meta name="Author" content="Rafaelsurfce">
-    <meta name="description" content="Ageend de contatos e gerenciamento">
-    <!--Font Icons-->
-    <script src="https://kit.fontawesome.com/9df899838e.js" crossorigin="anonymous"></script>
-
-
-    
-    <!--Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-    <title>Modelo</title>
-
-</head>
+<%- include('includes/head') %>
 <body>
-    <header class="cabecalho-home">
-        <button type="button" class="button-bar"><i class="fas fa-bars"></i></button>
-        <button type="button" class="button-user"><i class="fas fa-user-circle"></i></button>
-        <ul class="cabecalho-menu">
-            <li class="menu-item"><i class="fas fa-users"></i> Contatos</li>
-            <li class="menu-item"><i class="fas fa-user-plus"></i> Novo Contato</li>
-            <li class="menu-item"><i class="fas fa-info-circle"></i> Sobre</li>
-        </ul>
-    </header>
+<%- include('includes/menu') %>
     <main class="main-home">
         <table class="main-table">
             <thead>
