--- a/projetos/agenda/node/src/views/includes/menu.ejs
+++ b/projetos/agenda/node/src/views/includes/menu.ejs
@@ -1,9 +1,14 @@
 <header class="cabecalho-home">
     <button type="button" class="button-bar"><i class="fas fa-bars"></i></button>
     <button type="button" class="button-user"><i class="fas fa-user-circle"></i></button>
+
     <ul class="cabecalho-menu">
         <li class="menu-item"><i class="fas fa-users"></i> Contatos</li>
         <li class="menu-item"><i class="fas fa-user-plus"></i> Novo Contato</li>
         <li class="menu-item"><i class="fas fa-info-circle"></i> Sobre</li>
+    </ul>
+
+    <ul class="cabecalho-sair">
+        <li>Sair <i class="fas fa-sign-out-alt"></i></li>
     </ul>
 </header>
