--- a/projetos/agenda/node/src/views/includes/messages.ejs
+++ b/projetos/agenda/node/src/views/includes/messages.ejs
@@ -8,7 +8,7 @@
 
 
 <% if(sucess.length > 0) { %>
-    <span class="msg-error">
+    <span class="msg-sucess">
         <% sucess.forEach(sucess => { %>
             <%= sucess %>
         <%});%>
