--- a/projetos/agenda/node/frontend/assets/css/style.css
+++ b/projetos/agenda/node/frontend/assets/css/style.css
@@ -55,7 +55,7 @@ body{
     box-shadow: -5px 12px 20px #1f65c0, 5px 12px 20px #1f65c0;
     height: 372.2px;
     width: 270px;
-    padding: 2.5rem .8rem;
+    padding: 2rem .8rem;
     text-align: left;
 }
 
@@ -70,11 +70,6 @@ body{
 
 .subtitle{
     text-align: center;
-}
-
-form {
-    width: 100%;
-    margin: .8rem 0;
 }
 
 form label, form legend{
@@ -170,13 +165,30 @@ label[for="manter-conectado"]{
     font-size: 1.5rem;
 }
 
+.msg-sucess, .msg-error{
+    display: block;
+    padding: .19rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: .7rem;
+    border-radius: 4px;
+    color: white;
+}
+
+.msg-error{
+    background-color: #ff5656;
+}
+.msg-sucess{
+    background-color: #5cb85c;
+}
+
+
 .form-cadastro{
     background-color: white;
     border-radius: 15px;
     box-shadow: -5px 12px 20px #1f65c0, 5px 12px 20px #1f65c0;
-    height: 600.2px;
+    height: 590.2px;
     width: 270px;
-    padding: .8rem 1rem;
+    padding: .5rem 1rem;
     text-align: left;
 }
 
@@ -260,23 +272,28 @@ form input[type='text']{
 .button-user{
     float: right;
 }
-.cabecalho-menu{
+.cabecalho-menu, .cabecalho-sair{
     clear: left;
     font-size: 1rem;
     width: auto;
     display: none;
     list-style-type: none;
-}
-.cabecalho-menu li{
-    text-align: center;
     color: white;
+    text-align: center;
     padding: .2rem .5rem;
     cursor: pointer;
+    transition: color .5s;
 }
 
-.cabecalho-menu li:hover{
-   border: solid .5px white;
+.cabecalho-sair{
+    display: block;
+    float: right;
 }
+
+.cabecalho-menu li:hover, .cabecalho-sair li:hover, .button-bar:hover, .button-user:hover{
+    color: #e6e3e3;
+}
+
 
 /**/
 .main-home{
