--- a/projetos/agenda/node/src/views/includes/menu.ejs
+++ b/projetos/agenda/node/src/views/includes/menu.ejs
@@ -3,12 +3,12 @@
     <button type="button" class="button-user"><i class="fas fa-user-circle"></i></button>
 
     <ul class="cabecalho-menu">
-        <li class="menu-item"><i class="fas fa-users"></i> Contatos</li>
-        <li class="menu-item"><i class="fas fa-user-plus"></i> Novo Contato</li>
-        <li class="menu-item"><i class="fas fa-info-circle"></i> Sobre</li>
+        <a href="/home"><li class="menu-item"><i class="fas fa-users"></i> Contatos</li></a>
+        <a href="/novocontato"><li class="menu-item"><i class="fas fa-user-plus"></i> Novo Contato</li></a>
+        <a href="#"><li class="menu-item"><i class="fas fa-info-circle"></i> Sobre</li></a>
     </ul>
 
     <ul class="cabecalho-sair">
-        <li>Sair <i class="fas fa-sign-out-alt"></i></li>
+        <a href="/home/logout"><li>Sair <i class="fas fa-sign-out-alt"></i></li></a>
     </ul>
 </header>
