--- a/projetos/agenda/node/src/views/login.ejs
+++ b/projetos/agenda/node/src/views/login.ejs
@@ -24,6 +24,6 @@
             </section>
         </main>
     </div>
-    <script src="./assets/js/bundle.js"></script>
+    <script src="/assets/js/bundle.js"></script>
 </body>
 </html>
