--- a/projetos/agenda/node/src/views/userCadastro.ejs
+++ b/projetos/agenda/node/src/views/userCadastro.ejs
@@ -30,6 +30,6 @@
             </section>
         </main>
     </div>
-    <script src="./assets/js/bundle.js"></script>
+    <script src="/assets/js/bundle.js"></script>
 </body>
 </html>
