--- a/projetos/agenda/src/views/userCadastro.ejs
+++ b/projetos/agenda/src/views/userCadastro.ejs
@@ -24,7 +24,7 @@
                     <label for="confSenha">Confirmar Senha*</label>
                     <input type="password" name="confSenha" id="confSenha" placeholder="Confirme sua senha" class="valid">
                     <input type="submit" value="Cadastrar" class="button-cadastrar">
-                    <a href="http://localhost:2453/" class="button-login">Fazer Login</a>
+                    <a href="/" class="button-login">Fazer Login</a>
 
                 </form>
             </section>
